--- a/src/js/comp/css/mainaudioplayer.css
+++ b/src/js/comp/css/mainaudioplayer.css
@@ -55,9 +55,31 @@
     padding-block: 4px;
     margin-inline: 7px;
     width: 50%;
-    overflow: hidden;
     justify-content: space-evenly;
     height: fit-content;
+    overflow: hidden;
+    white-space: nowrap;
+  
+    .artist {
+      font-size: 1.4rem;
+      text-wrap: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+  
+    .name {
+      /* display: inline-block;
+      font-size: 1.267rem;
+      max-height: 12.67px; */
+      margin-top: 3px;
+      text-wrap: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+  
+      display: inline-block;
+      /* padding-left: 100%; */
+      animation: scroll 10s linear infinite;
+    }
   }
 
   .ap-div-info-alt {
@@ -84,27 +106,6 @@
   display: inline-block;
   padding-left: 100%;
   animation: scroll 10s linear infinite;
-}
-
-.ap-div-info {
-  overflow: hidden;
-  white-space: nowrap;
-
-  .artist {
-    font-size: 1.4rem;
-  }
-
-  .name {
-    /* display: inline-block;
-    font-size: 1.267rem;
-    max-height: 12.67px; */
-    margin-top: 3px;
-    overflow: hidden;
-
-    display: inline-block;
-    /* padding-left: 100%; */
-    animation: scroll 10s linear infinite;
-  }
 }
 
   /* Keyframes for horizontal scrolling */
